--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </ul>
       </header>
       <section>
-        <p><img src="https://pbs.twimg.com/profile_images/1344219585/buddyns-logo-small_400x400.png" alt="BuddyNS Logo">
-This extension adds to plesk's custom-backend dns feature to create, update and remove zones as plesk does.  buddyns.php is registered as a custom backend, and Plesk will pass the zone data to the script via stdin. API Calls to BuddyNS are made via php cURL.</p>
+        <h2>
+<a id="this-extension-adds-to-plesks-custom-backend-dns-feature-to-create-update-and-remove-zones-as-plesk-does--buddynsphp-is-registered-as-a-custom-backend-and-plesk-will-pass-the-zone-data-to-the-script-via-stdin-api-calls-to-buddyns-are-made-via-php-curl" class="anchor" href="#this-extension-adds-to-plesks-custom-backend-dns-feature-to-create-update-and-remove-zones-as-plesk-does--buddynsphp-is-registered-as-a-custom-backend-and-plesk-will-pass-the-zone-data-to-the-script-via-stdin-api-calls-to-buddyns-are-made-via-php-curl" aria-hidden="true"><span class="octicon octicon-link"></span></a>This extension adds to plesk's custom-backend dns feature to create, update and remove zones as plesk does.  buddyns.php is registered as a custom backend, and Plesk will pass the zone data to the script via stdin. API Calls to BuddyNS are made via php cURL.</h2>
 
 <p><strong>After Installing, you'll still need to follow the instructions at <a href="https://www.buddyns.com/support/setup/">BuddyNS AXFR Setup</a> to allow buddyNS to transfer your zones.</strong></p>
       </section>
